Refactoring REpiceaSystem class